--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,14 @@ repositories {
 }
 
 dependencies {
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.3'
+	implementation 'mysql:mysql-connector-java:8.0.32'
+	implementation 'org.hibernate:hibernate-core:6.3.0.Final'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.hibernate:hibernate-core:6.3.0.Final'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation "mysql:mysql-connector-java:6.0.6"
 	implementation "org.springframework.boot:spring-boot-starter-security"
 	implementation 'org.springframework.security:spring-security-ldap:5.5.1'
 	implementation 'org.springframework.security:spring-security-crypto:5.5.1'
