--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,2 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/allData
-spring.datasource.username=vicky
-spring.datasource.password=vicky
+spring.security.user.name=vicky
+spring.security.user.password=vicky
