--- a/build.gradle
+++ b/build.gradle
@@ -20,17 +20,16 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.3'
 	implementation 'mysql:mysql-connector-java:8.0.32'
 	implementation 'org.hibernate:hibernate-core:6.3.0.Final'
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	implementation "org.springframework.boot:spring-boot-starter-security"
-	implementation 'org.springframework.security:spring-security-ldap:5.5.1'
-	implementation 'org.springframework.security:spring-security-crypto:5.5.1'
-	implementation 'org.springframework.ldap:spring-ldap-core:2.3.5.RELEASE'
-	implementation 'org.springframework:spring-tx:5.3.15'
-	implementation 'com.unboundid:unboundid-ldapsdk'
 
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6:3.1.1.RELEASE'
+	implementation 'org.springframework.security:spring-security-test'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
 
 tasks.named('test') {
