--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,7 @@ spring:
     show-sql: false
     properties:
       hibernate:
+       globally_quoted_identifiers: true
        jdbc:
          lob.non_contextual_creation: true
        dialect: org.hibernate.dialect.MySQL8Dialect
