--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "axios": "^1.6.0",
+    "axios": "^1.6.1",
     "bootstrap-icons": "^1.11.1",
-    "v-calendar": "^3.1.2"
+    "v-calendar": "^3.1.2",
+    "vue-axios": "^3.5.2"
   }
 }
