--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     username: root
-    password: root
+    password: 1234567890xa
     url: jdbc:mysql://localhost:3306/hospitalcrm
     driver-class-name: com.mysql.jdbc.Driver
   jpa:
